--- a/styles/layout.css
+++ b/styles/layout.css
@@ -19,6 +19,20 @@ header {
 	border: none;
 }
 
+footer {
+    text-align: center;
+    padding: 1em;
+    margin-top: 2em;
+    border-top: 1px solid #b2ebf2;
+}
+
+article footer {
+    border-top: none;
+    text-align: left;
+    padding: 0.5em 0;
+    margin-top: 1em;
+}
+
 section {
 	margin-bottom: 1.5em;
 	background: #f7f7f7;
